[package]
name = "wooting-analog-sys"
version = "0.0.1"
authors = ["John Doneth <doneth7@gmail.com>"]
build = "build.rs"
description = ""
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/JohnDoneth/wooting-rs"

[dependencies]

[build-dependencies]
bindgen = "0.42.1"
cc = "1.0"