[package]
name = "wooting-keyboard"
version = "0.0.1"
authors = ["John Doneth <doneth7@gmail.com>"]
description = "High-level Rust wrapper for the Wooting Keyboard, exposing both RGB and Analog functionality."
license = "MIT"
repository = "https://github.com/JohnDoneth/wooting-rs"

[dependencies]
wooting-analog-sys = { path = "../wooting-analog-sys" }
wooting-rgb-sys = { path = "../wooting-rgb-sys" }

rgb = "*"
