[package]
name = "wooting-rgb-sys"
version = "0.0.1"
authors = ["John Doneth <doneth7@gmail.com>"]
build = "build.rs"
description = "Rust low-level bindgen-generated wrapper around the wooting-rgb-sdk"
license = "MIT"
repository = "https://github.com/JohnDoneth/wooting-rs"

[dependencies]

[build-dependencies]
bindgen = "0.42.2"
cc = "1.0"